[gd_scene load_steps=30 format=3 uid="uid://m0a3fws6u32e"]

[ext_resource type="AudioStream" uid="uid://fpc51oca5uay" path="res://music/global/POL-king-of-coins-short.wav" id="1_ahx2e"]
[ext_resource type="Texture2D" uid="uid://dynwokuvn7veb" path="res://Rocky Roads/Tilesets/tileset_water.png" id="1_islb4"]
[ext_resource type="Texture2D" uid="uid://dyudsw23witkd" path="res://Rocky Roads/Backgrounds/clouds.png" id="1_lfsv2"]
[ext_resource type="Texture2D" uid="uid://b3b1jwcl7lw7h" path="res://Rocky Roads/Backgrounds/mountains_a.png" id="1_tj8np"]
[ext_resource type="Script" path="res://scripts/SharedCamera.gd" id="1_ue7mv"]
[ext_resource type="Texture2D" uid="uid://bi8pkimwm30o" path="res://Rocky Roads/Backgrounds/desert_a.png" id="3_o4yod"]
[ext_resource type="Texture2D" uid="uid://dqun720s7ulxp" path="res://Rocky Roads/Deco/clouds.png" id="4_p56bh"]
[ext_resource type="Texture2D" uid="uid://bl6w7wjhholr0" path="res://Rocky Roads/Objects/sign_arrow.png" id="5_2xyou"]
[ext_resource type="Texture2D" uid="uid://bxutxe2vk1pqu" path="res://Rocky Roads/Objects/coin_gold.png" id="7_06os1"]
[ext_resource type="PackedScene" uid="uid://c2oii50wup524" path="res://scenes/coin.tscn" id="10_4nj3n"]
[ext_resource type="PackedScene" uid="uid://d3r72jwxppe2h" path="res://scenes/enemy.tscn" id="11_3kgsn"]
[ext_resource type="Script" path="res://UI.gd" id="11_onsiu"]
[ext_resource type="Script" path="res://scripts/ZonaCaida.gd" id="12_mmfny"]
[ext_resource type="PackedScene" uid="uid://dncapflbstwx5" path="res://scenes/player2.tscn" id="13_q50ib"]
[ext_resource type="Texture2D" uid="uid://cw45rde7jr6lh" path="res://Rocky Roads/Enemies/spikes.png" id="14_1rk4b"]
[ext_resource type="PackedScene" uid="uid://duj0pnqdqjoqg" path="res://scenes/paused_menu.tscn" id="14_ibd1b"]
[ext_resource type="PackedScene" uid="uid://8l7372lb6swv" path="res://scenes/player1.tscn" id="15_embei"]
[ext_resource type="PackedScene" uid="uid://cfaxt05f75j0d" path="res://scenes/saw.tscn" id="15_qb1dx"]
[ext_resource type="PackedScene" uid="uid://djl2rq08762mg" path="res://scenes/heart_p1.tscn" id="16_cxx2x"]
[ext_resource type="PackedScene" uid="uid://cjbh3e4wru38f" path="res://scenes/heart_p2.tscn" id="17_qrn4x"]
[ext_resource type="PackedScene" uid="uid://7jqv2qf7f8p3" path="res://scenes/chest.tscn" id="21_1lfak"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0ivak"]
texture = ExtResource("1_islb4")
2:0/next_alternative_id = 2
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/bottom_side = 0
3:0/0 = 0
5:0/next_alternative_id = 2
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/left_side = 0
3:1/next_alternative_id = 3
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0/terrains_peering_bit/right_side = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/left_side = 0
3:1/0/terrains_peering_bit/top_side = 0
4:1/next_alternative_id = 3
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/left_side = 0
4:1/0/terrains_peering_bit/top_side = 0
5:1/next_alternative_id = 4
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_side = 0
6:1/next_alternative_id = 2
6:1/0 = 0
8:1/next_alternative_id = 2
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/next_alternative_id = 5
10:1/0 = 0
10:1/0/terrain_set = 0
10:1/4 = 4
1:2/next_alternative_id = 3
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_side = 0
2:2/next_alternative_id = 3
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/right_side = 0
2:2/0/terrains_peering_bit/bottom_side = 0
2:2/0/terrains_peering_bit/left_side = 0
3:2/next_alternative_id = 3
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/right_side = 0
3:2/0/terrains_peering_bit/bottom_side = 0
3:2/0/terrains_peering_bit/left_side = 0
3:2/0/terrains_peering_bit/top_side = 0
4:2/next_alternative_id = 4
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/terrains_peering_bit/right_side = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/left_side = 0
4:2/0/terrains_peering_bit/top_side = 0
5:2/next_alternative_id = 3
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/left_side = 0
6:2/next_alternative_id = 3
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/top_side = 0
10:2/next_alternative_id = 5
10:2/0 = 0
10:2/0/terrain_set = 0
10:2/4 = 4
1:3/next_alternative_id = 4
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0/terrains_peering_bit/bottom_side = 0
1:3/0/terrains_peering_bit/left_side = 0
2:3/next_alternative_id = 3
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/bottom_side = 0
2:3/0/terrains_peering_bit/left_side = 0
2:3/0/terrains_peering_bit/top_side = 0
3:3/next_alternative_id = 5
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/terrains_peering_bit/right_side = 0
3:3/0/terrains_peering_bit/bottom_side = 0
3:3/0/terrains_peering_bit/left_side = 0
3:3/0/terrains_peering_bit/top_side = 0
4:3/next_alternative_id = 3
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/right_side = 0
4:3/0/terrains_peering_bit/bottom_side = 0
4:3/0/terrains_peering_bit/left_side = 0
4:3/0/terrains_peering_bit/top_side = 0
5:3/next_alternative_id = 3
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/bottom_side = 0
5:3/0/terrains_peering_bit/left_side = 0
5:3/0/terrains_peering_bit/top_side = 0
6:3/next_alternative_id = 3
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/top_side = 0
8:3/next_alternative_id = 2
8:3/0 = 0
8:3/0/terrain_set = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/next_alternative_id = 2
9:3/0 = 0
9:3/0/terrain_set = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/next_alternative_id = 6
10:3/0 = 0
10:3/0/terrain_set = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/5 = 5
1:4/next_alternative_id = 3
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0/terrains_peering_bit/right_side = 0
1:4/0/terrains_peering_bit/bottom_side = 0
1:4/0/terrains_peering_bit/left_side = 0
1:4/0/terrains_peering_bit/top_side = 0
2:4/next_alternative_id = 3
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0/terrains_peering_bit/right_side = 0
2:4/0/terrains_peering_bit/bottom_side = 0
2:4/0/terrains_peering_bit/left_side = 0
2:4/0/terrains_peering_bit/top_side = 0
3:4/next_alternative_id = 3
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0/terrains_peering_bit/bottom_side = 0
3:4/0/terrains_peering_bit/left_side = 0
3:4/0/terrains_peering_bit/top_side = 0
4:4/next_alternative_id = 3
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0/terrains_peering_bit/right_side = 0
4:4/0/terrains_peering_bit/bottom_side = 0
4:4/0/terrains_peering_bit/top_side = 0
5:4/next_alternative_id = 3
5:4/0 = 0
5:4/0/terrain_set = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0/terrains_peering_bit/right_side = 0
5:4/0/terrains_peering_bit/bottom_side = 0
5:4/0/terrains_peering_bit/left_side = 0
5:4/0/terrains_peering_bit/top_side = 0
6:4/next_alternative_id = 3
6:4/0 = 0
6:4/0/terrain_set = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0/terrains_peering_bit/right_side = 0
6:4/0/terrains_peering_bit/bottom_side = 0
6:4/0/terrains_peering_bit/left_side = 0
2:1/next_alternative_id = 7
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_side = 0
2:1/1 = 1
1:1/next_alternative_id = 2
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fr8mi"]
texture = ExtResource("7_06os1")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSet" id="TileSet_wm2ok"]
physics_layer_0/collision_layer = 5
physics_layer_0/collision_mask = 5
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_0ivak")
sources/1 = SubResource("TileSetAtlasSource_fr8mi")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhjsc"]
bg_color = Color(0, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wewxt"]
size = Vector2(311, 33)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qquwx"]
texture = ExtResource("14_1rk4b")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.8007, -4.86136, -0.0883875, 2.56326, 3.44715, -4.68458, 5.56847, 0.618718, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_uaedw"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_qquwx")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r84a0"]
size = Vector2(14, 11)

[node name="Game" type="Node2D"]
texture_filter = 1
script = ExtResource("1_ue7mv")

[node name="Clouds" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-77, -124.75)
scale = Vector2(1.10937, 1.14453)
texture = ExtResource("1_lfsv2")

[node name="MountainsA" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-77, -58.5)
scale = Vector2(1.10547, 0.929688)
texture = ExtResource("1_tj8np")

[node name="DesertA" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-78, 24.5)
scale = Vector2(1.09961, 0.398438)
texture = ExtResource("3_o4yod")

[node name="Clouds DECO" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-187, -50)
scale = Vector2(0.609375, 0.645833)
texture = ExtResource("4_p56bh")

[node name="SignArrow" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-136, -49)
texture = ExtResource("5_2xyou")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_wm2ok")
format = 2
layer_0/tile_data = PackedInt32Array(-7, 196608, 1, -6, 196608, 1, -5, 196608, 1, -2, 262144, 1, -1, 262144, 1, -65536, 327680, 1, -131072, 327680, 0, -131082, 65536, 3, -65546, 65536, 3, -10, 65536, 3, -196618, 65536, 3, -262154, 524288, 1, -327690, 655360, 2, -9, 65536, 3, -8, 65536, 3, -65544, 393216, 2, -65545, 393216, 2, -196610, 65536, 1, -196614, 196608, 1, -196613, 196608, 1, -196611, 196608, 1, -196612, 196608, 1, -3, 262144, 1, -4, 262144, 1, -65534, 131072, 1, -65533, 131072, 1, -65532, 131072, 1, -65531, 131072, 1, -65530, 131072, 1, -65529, 131072, 1, -65528, 131072, 1, -65527, 131072, 1, -65526, 131072, 1, -65525, 131072, 1, -65524, 131072, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_ahx2e")
autoplay = true

[node name="SharedCamera" type="Camera2D" parent="."]
zoom = Vector2(3.5, 3.5)

[node name="Player1" parent="." instance=ExtResource("15_embei")]
position = Vector2(-95, -30)

[node name="Camera2D" type="Camera2D" parent="Player1"]
texture_filter = 1
ignore_rotation = false
zoom = Vector2(4, 4)
limit_smoothed = true

[node name="Player2" parent="." instance=ExtResource("13_q50ib")]
position = Vector2(-65, -86)

[node name="Camera2D" type="Camera2D" parent="Player2"]
texture_filter = 1
ignore_rotation = false
zoom = Vector2(4, 4)

[node name="Enemy" parent="." instance=ExtResource("11_3kgsn")]
position = Vector2(-32, -31)

[node name="Coin" parent="." instance=ExtResource("10_4nj3n")]
position = Vector2(1, -39)

[node name="Coin2" parent="." instance=ExtResource("10_4nj3n")]
position = Vector2(-65, -20)

[node name="Coin3" parent="." instance=ExtResource("10_4nj3n")]
position = Vector2(-125, -45)

[node name="Chest" parent="." instance=ExtResource("21_1lfak")]
position = Vector2(-149, -96)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(450, 375)
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 450, 375)
script = ExtResource("11_onsiu")

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = -104.75
offset_top = -85.0
offset_right = -45.75
offset_bottom = -64.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rhjsc")

[node name="PausedMenu" parent="CanvasLayer" instance=ExtResource("14_ibd1b")]
process_mode = 3
texture_filter = 1
offset_left = -111.0
offset_top = -89.0
offset_right = -980.0
offset_bottom = -585.0

[node name="Coins" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(-92.75, -74)
texture = ExtResource("7_06os1")
hframes = 8

[node name="HeartP11" parent="CanvasLayer" instance=ExtResource("16_cxx2x")]
position = Vector2(-11, -76.25)

[node name="HeartP12" parent="CanvasLayer" instance=ExtResource("16_cxx2x")]
position = Vector2(10.75, -76.5)

[node name="HeartP13" parent="CanvasLayer" instance=ExtResource("16_cxx2x")]
position = Vector2(32.75, -77)

[node name="HeartP21" parent="CanvasLayer" instance=ExtResource("17_qrn4x")]
position = Vector2(105, -77.25)

[node name="HeartP22" parent="CanvasLayer" instance=ExtResource("17_qrn4x")]
position = Vector2(126.75, -77)

[node name="HeartP23" parent="CanvasLayer" instance=ExtResource("17_qrn4x")]
position = Vector2(149, -77.5)

[node name="CoinsCollectedText" type="Label" parent="CanvasLayer"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
offset_left = -71.0
offset_top = -86.0
offset_right = -51.0
offset_bottom = -63.0
text = "00"

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
offset_left = -80.75
offset_top = -87.0
offset_right = -74.75
offset_bottom = -64.0
text = ":"

[node name="P1_label" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = -39.25
offset_top = -87.5
offset_right = -20.25
offset_bottom = -64.5
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "P1"

[node name="P2_label" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = 76.5
offset_top = -87.25
offset_right = 95.5
offset_bottom = -64.25
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "P2"

[node name="ZonaCaida" type="Area2D" parent="."]
script = ExtResource("12_mmfny")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaCaida"]
position = Vector2(-79.5, 24.5)
shape = SubResource("RectangleShape2D_wewxt")

[node name="Spikes" type="Area2D" parent="."]

[node name="TileMap" type="TileMap" parent="Spikes"]
texture_filter = 1
tile_set = SubResource("TileSet_uaedw")
format = 2
layer_0/tile_data = PackedInt32Array(-196615, 0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spikes"]
position = Vector2(-104, -55.5)
shape = SubResource("RectangleShape2D_r84a0")

[node name="Saw" parent="." instance=ExtResource("15_qb1dx")]
position = Vector2(-4, -101)

[connection signal="body_entered" from="ZonaCaida" to="ZonaCaida" method="_on_body_entered"]
[connection signal="body_entered" from="Spikes" to="Player1" method="_on_spikes_body_entered"]
[connection signal="body_entered" from="Spikes" to="Player2" method="_on_spikes_body_entered"]
